--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ควยไรนัด</title>
+        <title>Workshop</title>
         <meta charset="UTF-8"/>
 </head>
 <body>
