--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Workshop</title>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
     <h1>Workshop #HTML-FORM</h1>
